samples/_failures_safe/1761659683_c4b2e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0886dd5c.c: In function ‘main’:
./samples/SAFE/__tmp_0886dd5c.c:149:26: error: ‘uint’ undeclared (first use in this function); did you mean ‘int’?
  149 |         test_input[i] = (uint
      |                          ^~~~
      |                          int
./samples/SAFE/__tmp_0886dd5c.c:149:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0886dd5c.c:149:30: error: expected ‘)’ at end of input
  149 |         test_input[i] = (uint
      |                         ~    ^
      |                              )
./samples/SAFE/__tmp_0886dd5c.c:149:9: error: expected declaration or statement at end of input
  149 |         test_input[i] = (uint
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_0886dd5c.c:149:9: error: expected declaration or statement at end of input
